[package]
name = "mfs"
version = "0.1.0"
authors = ["<bhy18@mails.tsinghua.edu.cn>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["staticlib"]
name = "mfs"

[dependencies]
libc = "*"
lazy_static = { version = "1.4.0" }
rust-crypto = "^0.2"